[tool.poetry]
name = "ros2-pkg-builder"
version = "0.0.1"
description = "Tools for setting up hosting your own buildfarm on github"
authors = ["Masaya Kataoka <ms.kataoka@gmail.com>"]
readme = "README.md"
packages = [{include = "ros2_pkg_builder"}]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
pathlib = "^1.0.1"
python-on-whales = "^0.64.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
mypy = "^1.5.1"
black = "^23.7.0"
taskipy = "^1.12.0"
pytest = "^7.4.0"
lark = "^1.1.7"

[tool.poetry.scripts]
build_deb_packages = "ros2_pkg_builder.build:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
prepare.cmd = "pre-commit install && pre-commit install --hook-type commit-msg"
prepare.help = "sets up a development environment"

lint.cmd = "pre-commit run --all-files"
lint.help = "runs linters (+ fix)"

test.cmd  = "pytest"
test.help = "runs tests"
